# suit-skills

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Dockerfile  MANIFEST.txt  PUBLISH.md  README.md  docker-compose.yml  latest.json  package-lock.json  package.json  playwright.config.ts  playwright.platform.config.ts  readme.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
.understand-anything/: .understandignore  knowledge-graph.json  meta.json
.workflow/: branch-pipeline.yml  desktop-macos-pipeline.yml  desktop-windows-pipeline.yml  master-pipeline.yml  pr-pipeline.yml
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: commands.rs  lib.rs
deploy/: nginx.conf  platform-api-start.cjs
docs/: README.md  builtin-source-mirrors.md  desktop-follow-up-issues-2026-04-25.md  desktop-settings-cache-requirements.md  desktop.md  development.md  e2e-bugs-2026-04-20.md  feature-port-retry.md  global-translation-requirements-2026-04-22.md  monorepo-migration-baseline.md  monorepo-platform-architecture.md  monorepo-platform-task-breakdown.md  notification-center-backend-spec.md  optimization-task-list-2026-04-18.md  other.md  performance-checklist-2026-04-22.md  platform-database-design.md  platform-deployment-manual.md  platform-upload-review-flow.md  platform-web-hub.md  platform-web-optimization-loop-with-email.md  platform-web-product-analysis.md  platform-web-skill-interaction-design.md  platform-web-skill-market-design.md  requirements.md  (+15 more)
(+207 files in other folders)
